@@ -149,7 +149,7 @@
 .\" ========================================================================
 .\"
 .IX Title "VISUDO 8"
-.TH VISUDO 8 "March 12, 2005" "1.6.8p8" "MAINTENANCE COMMANDS"
+.TH VISUDO 8 "June 20, 2005" "1.6.8p9" "MAINTENANCE COMMANDS"
 .SH "NAME"
 visudo \- edit the sudoers file
 .SH "SYNOPSIS"
