@@ -1786,3 +1786,10 @@ Sudo 1.6.8p7 released.
 564) Fixed a bug that prevented Heimdal authentication from working.
 
 Sudo 1.6.8p8 released.
+
+565) Updated config.guess and config.sub entries for OpenBSD.
+
+566) A sudoers entry with sudo ALL no longer overwrites the value of
+     safe_cmnd.
+
+Sudo 1.6.8p9 released.
